Fixing margins on small screens

--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body{
   background: linear-gradient( #AAA , #F2F2F0); /* Standard syntax */
 
   height:20px;
+  position:fixed;
+  top:0;
+  width:100%;
 }
 
 .meta{
@@ -34,7 +37,7 @@ body{
 }
 
 .circle{
-	margin:30px auto;
+	margin:20px auto;
 	display:block;
 	width: 30%;
 	min-width:600px;
